log/build_2025-06-22_01-19-08/sm_mppi_planner/stderr.log
  File "/home/wim/Documents/social_momentum_venv/social_momentum_MPPI/install/sm_mppi_planner/lib/python3.10/site-packages/sm_mppi_planner/gazebo_human_controller.py", line 143
    ```python
    ^
SyntaxError: invalid syntax

